--- a/package.json
+++ b/package.json
@@ -17,24 +17,23 @@
     "@parcel/watcher": "^2.5.1",
     "diff": "^7.0.0",
     "drizzle-kit": "^0.30.5",
-    "drizzle-orm": "^0.40.0",
-    "ink": "^4.1.0",
+    "drizzle-orm": "^0.40.1",
+    "ink": "^5.2.0",
     "ink-gradient": "^3.0.0",
     "ink-multi-select": "^2.0.0",
     "ink-select-input": "^6.0.0",
+    "ink-text-input": "^6.0.0",
     "react": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-router": "^7.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@libsql/client": "^0.14.0",
+    "@libsql/client": "^0.15.0",
     "@types/bun": "^1.2.5",
     "@types/diff": "^7.0.1",
     "@types/react": "^18.0.32",
     "chalk": "^5.2.0",
-    "ink-testing-library": "^3.0.0",
-    "prettier": "^2.8.7",
     "typescript": "^5.0.3"
   },
   "trustedDependencies": [
