--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "outDir": "dist",
-    "baseUrl": "./src",
+    // "baseUrl": "./src",
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
@@ -13,9 +11,9 @@
     "allowJs": true,
     // Bundler mode
     "moduleResolution": "bundler",
-    // "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    // "noEmit": true,
+    "noEmit": true,
     // Best practices
     "strict": true,
     "skipLibCheck": true,
